force-app/main/default/objects/EPI__c/EPI__c.object-meta.xml
<CustomObject>
    <label>EPI</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EPI Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>