force-app/main/default/objects/EPI__c/fields/EPI_ACName__c.field-meta.xml
<CustomField>
    <fullName>EPI_ACName__c</fullName>
    <label>EPI_ACName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>