force-app/main/default/objects/EPI__c/fields/EPI_AnyDocuments__c.field-meta.xml
<CustomField>
    <fullName>EPI_AnyDocuments__c</fullName>
    <label>EPI_AnyDocuments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>