force-app/main/default/objects/EPI__c/fields/EPI_Borough_StatenIsland__c.field-meta.xml
<CustomField>
    <fullName>EPI_Borough_StatenIsland__c</fullName>
    <label>EPI_Borough_StatenIsland</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>