force-app/main/default/objects/EPI__c/fields/EPI_CrossTabInterestedIn__c.field-meta.xml
<CustomField>
    <fullName>EPI_CrossTabInterestedIn__c</fullName>
    <label>EPI_CrossTabInterestedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>