force-app/main/default/objects/EPI__c/fields/EPI_CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>EPI_CurrentStatus__c</fullName>
    <label>EPI_CurrentStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>