force-app/main/default/objects/EPI__c/fields/EPI_CursoryReviewAnalystName__c.field-meta.xml
<CustomField>
    <fullName>EPI_CursoryReviewAnalystName__c</fullName>
    <label>EPI_CursoryReviewAnalystName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>