force-app/main/default/objects/EPI__c/fields/EPI_DataAudience__c.field-meta.xml
<CustomField>
    <fullName>EPI_DataAudience__c</fullName>
    <label>EPI_DataAudience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>