force-app/main/default/objects/EPI__c/fields/EPI_DataPresent_PropertionsSelected__c.field-meta.xml
<CustomField>
    <fullName>EPI_DataPresent_PropertionsSelected__c</fullName>
    <label>EPI_DataPresent_PropertionsSelected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>