force-app/main/default/objects/EPI__c/fields/EPI_DataPresent_Rates__c.field-meta.xml
<CustomField>
    <fullName>EPI_DataPresent_Rates__c</fullName>
    <label>EPI_DataPresent_Rates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>