force-app/main/default/objects/EPI__c/fields/EPI_DataSource_OtherDesc__c.field-meta.xml
<CustomField>
    <fullName>EPI_DataSource_OtherDesc__c</fullName>
    <label>EPI_DataSource_OtherDesc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>