force-app/main/default/objects/EPI__c/fields/EPI_DataSource_SDH__c.field-meta.xml
<CustomField>
    <fullName>EPI_DataSource_SDH__c</fullName>
    <label>EPI_DataSource_SDH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>