force-app/main/default/objects/EPI__c/fields/EPI_DPHO_All__c.field-meta.xml
<CustomField>
    <fullName>EPI_DPHO_All__c</fullName>
    <label>EPI_DPHO_All</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>