force-app/main/default/objects/EPI__c/fields/EPI_DPHO_OtherDescription__c.field-meta.xml
<CustomField>
    <fullName>EPI_DPHO_OtherDescription__c</fullName>
    <label>EPI_DPHO_OtherDescription</label>
    <length>50</length>
    <type>Text</type>
</CustomField>