force-app/main/default/objects/EPI__c/fields/EPI_GroupDifferenceContextualization__c.field-meta.xml
<CustomField>
    <fullName>EPI_GroupDifferenceContextualization__c</fullName>
    <label>EPI_GroupDifferenceContextualization</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>