force-app/main/default/objects/EPI__c/fields/EPI_ImmediateRequest__c.field-meta.xml
<CustomField>
    <fullName>EPI_ImmediateRequest__c</fullName>
    <label>EPI_ImmediateRequest</label>
    <length>255</length>
    <type>Text</type>
</CustomField>