force-app/main/default/objects/EPI__c/fields/EPI_IndicateDateRequired__c.field-meta.xml
<CustomField>
    <fullName>EPI_IndicateDateRequired__c</fullName>
    <label>EPI_IndicateDateRequired</label>
    <type>DateTime</type>
</CustomField>