force-app/main/default/objects/EPI__c/fields/EPI_IsACorHigher__c.field-meta.xml
<CustomField>
    <fullName>EPI_IsACorHigher__c</fullName>
    <label>EPI_IsACorHigher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>