force-app/main/default/objects/EPI__c/fields/EPI_OtherGeographic__c.field-meta.xml
<CustomField>
    <fullName>EPI_OtherGeographic__c</fullName>
    <label>EPI_OtherGeographic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>