force-app/main/default/objects/EPI__c/fields/EPI_OtherGeographicDesc__c.field-meta.xml
<CustomField>
    <fullName>EPI_OtherGeographicDesc__c</fullName>
    <label>EPI_OtherGeographicDesc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>