force-app/main/default/objects/EPI__c/fields/EPI_OutcomesInterestedIn__c.field-meta.xml
<CustomField>
    <fullName>EPI_OutcomesInterestedIn__c</fullName>
    <label>EPI_OutcomesInterestedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>