force-app/main/default/objects/EPI__c/fields/EPI_PopulationInterestedIn__c.field-meta.xml
<CustomField>
    <fullName>EPI_PopulationInterestedIn__c</fullName>
    <label>EPI_PopulationInterestedIn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>