force-app/main/default/objects/EPI__c/fields/EPI_PublicHealthOfficeArea__c.field-meta.xml
<CustomField>
    <fullName>EPI_PublicHealthOfficeArea__c</fullName>
    <label>EPI_PublicHealthOfficeArea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>