force-app/main/default/objects/EPI__c/fields/EPI_RacismHealthInequitiesAddressed__c.field-meta.xml
<CustomField>
    <fullName>EPI_RacismHealthInequitiesAddressed__c</fullName>
    <label>EPI_RacismHealthInequitiesAddressed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>