force-app/main/default/objects/EPI__c/fields/EPI_RacismHealthInequitiesAddressedNoWhy__c.field-meta.xml
<CustomField>
    <fullName>EPI_RacismHealthInequitiesAddressedNoWhy__c</fullName>
    <label>EPI_RacismHealthInequitiesAddressedNoWhy</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>