force-app/main/default/objects/EPI__c/fields/EPI_RacismHealthInequitiesAddressedYesDe__c.field-meta.xml
<CustomField>
    <fullName>EPI_RacismHealthInequitiesAddressedYesDe__c</fullName>
    <label>EPI_RacismHealthInequitiesAddressedYesDe</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>