force-app/main/default/objects/EPI__c/fields/EPI_Request_AdditionalInform__c.field-meta.xml
<CustomField>
    <fullName>EPI_Request_AdditionalInform__c</fullName>
    <label>EPI_Request_AdditionalInform</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>