force-app/main/default/objects/EPI__c/fields/EPI_RequestType__c.field-meta.xml
<CustomField>
    <fullName>EPI_RequestType__c</fullName>
    <label>EPI_RequestType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>