force-app/main/default/objects/EPI__c/fields/EPI_ResearchQuestion__c.field-meta.xml
<CustomField>
    <fullName>EPI_ResearchQuestion__c</fullName>
    <label>EPI_ResearchQuestion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>