force-app/main/default/objects/EPI__c/fields/EPI_ResponseLevelText__c.field-meta.xml
<CustomField>
    <fullName>EPI_ResponseLevelText__c</fullName>
    <label>EPI_ResponseLevelText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>