force-app/main/default/objects/EPI__c/fields/EPI_ServiceResponseLevel__c.field-meta.xml
<CustomField>
    <fullName>EPI_ServiceResponseLevel__c</fullName>
    <label>EPI_ServiceResponseLevel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Long term (&gt;2 weeks)--specify date required</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Priority: within 1 week</fullName>
            </value>
            <value>
                <fullName>Routine: within 2 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>