force-app/main/default/objects/EPI__c/fields/EPI_TitleOfRequested__c.field-meta.xml
<CustomField>
    <fullName>EPI_TitleOfRequested__c</fullName>
    <label>EPI_TitleOfRequested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>