force-app/main/default/objects/EPI__c/fields/EPI_UnitedHospitalFund__c.field-meta.xml
<CustomField>
    <fullName>EPI_UnitedHospitalFund__c</fullName>
    <label>EPI_UnitedHospitalFund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>