force-app/main/default/objects/EPI__c/fields/EPI_Use_Grant__c.field-meta.xml
<CustomField>
    <fullName>EPI_Use_Grant__c</fullName>
    <label>EPI_Use_Grant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>