force-app/main/default/objects/EPI__c/fields/EPI_Use_OtherInformation__c.field-meta.xml
<CustomField>
    <fullName>EPI_Use_OtherInformation__c</fullName>
    <label>EPI_Use_OtherInformation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>