force-app/main/default/objects/EPI__c/fields/EPI_Use_Publication__c.field-meta.xml
<CustomField>
    <fullName>EPI_Use_Publication__c</fullName>
    <label>EPI_Use_Publication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>