force-app/main/default/objects/EPI__c/fields/EPI_WFID01UserName__c.field-meta.xml
<CustomField>
    <fullName>EPI_WFID01UserName__c</fullName>
    <label>EPI_WFID01UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>