force-app/main/default/objects/EPI__c/fields/EPI_WFIMMEDIATEBody__c.field-meta.xml
<CustomField>
    <fullName>EPI_WFIMMEDIATEBody__c</fullName>
    <label>EPI_WFIMMEDIATEBody</label>
    <length>255</length>
    <type>Text</type>
</CustomField>