force-app/main/default/objects/EPI__c/fields/EPI_WFIMMEDIATESubject__c.field-meta.xml
<CustomField>
    <fullName>EPI_WFIMMEDIATESubject__c</fullName>
    <label>EPI_WFIMMEDIATESubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>