force-app/main/default/objects/EPI__c/fields/EPI_YearsOfData__c.field-meta.xml
<CustomField>
    <fullName>EPI_YearsOfData__c</fullName>
    <label>EPI_YearsOfData</label>
    <length>255</length>
    <type>Text</type>
</CustomField>