force-app/main/default/objects/EPI__c/fields/EPIDC_AbbrDatasetName__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_AbbrDatasetName__c</fullName>
    <label>EPIDC_AbbrDatasetName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>