force-app/main/default/objects/EPI__c/fields/EPIDC_AgeGroup__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_AgeGroup__c</fullName>
    <label>EPIDC_AgeGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>