force-app/main/default/objects/EPI__c/fields/EPIDC_DataAccessRestrictedShowExternal__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_DataAccessRestrictedShowExternal__c</fullName>
    <label>EPIDC_DataAccessRestrictedShowExternal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>