force-app/main/default/objects/EPI__c/fields/EPIDC_DataCollectPurpose__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_DataCollectPurpose__c</fullName>
    <label>EPIDC_DataCollectPurpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>