force-app/main/default/objects/EPI__c/fields/EPIDC_DataDescription__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_DataDescription__c</fullName>
    <label>EPIDC_DataDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>