force-app/main/default/objects/EPI__c/fields/EPIDC_DataGroup__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_DataGroup__c</fullName>
    <label>EPIDC_DataGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>