force-app/main/default/objects/EPI__c/fields/EPIDC_DataMatchOther__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_DataMatchOther__c</fullName>
    <label>EPIDC_DataMatchOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>