force-app/main/default/objects/EPI__c/fields/EPIDC_DataSteward__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_DataSteward__c</fullName>
    <label>EPIDC_DataSteward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>