force-app/main/default/objects/EPI__c/fields/EPIDC_EmergencyPreparedness__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_EmergencyPreparedness__c</fullName>
    <label>EPIDC_EmergencyPreparedness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>