force-app/main/default/objects/EPI__c/fields/EPIDC_EPIDC_tblRequestId_Old__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_EPIDC_tblRequestId_Old__c</fullName>
    <label>EPIDC_EPIDC_tblRequestId_Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>