force-app/main/default/objects/EPI__c/fields/EPIDC_FullDatasetName__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_FullDatasetName__c</fullName>
    <label>EPIDC_FullDatasetName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>