force-app/main/default/objects/EPI__c/fields/EPIDC_Keywords__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_Keywords__c</fullName>
    <label>EPIDC_Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>