force-app/main/default/objects/EPI__c/fields/EPIDC_PopulationUniverse__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_PopulationUniverse__c</fullName>
    <label>EPIDC_PopulationUniverse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>