force-app/main/default/objects/EPI__c/fields/EPIDC_PopulationUniverseAgeFrom__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_PopulationUniverseAgeFrom__c</fullName>
    <label>EPIDC_PopulationUniverseAgeFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>