force-app/main/default/objects/EPI__c/fields/EPIDC_PopulationUniverseAgeTo__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_PopulationUniverseAgeTo__c</fullName>
    <label>EPIDC_PopulationUniverseAgeTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>