force-app/main/default/objects/EPI__c/fields/EPIDC_PopulationUniverseDescription__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_PopulationUniverseDescription__c</fullName>
    <label>EPIDC_PopulationUniverseDescription</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>