force-app/main/default/objects/EPI__c/fields/EPIDC_PrimaryContactName__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_PrimaryContactName__c</fullName>
    <label>EPIDC_PrimaryContactName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>