force-app/main/default/objects/EPI__c/fields/EPIDC_PrimaryContactShowExternal__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_PrimaryContactShowExternal__c</fullName>
    <label>EPIDC_PrimaryContactShowExternal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>