force-app/main/default/objects/EPI__c/fields/EPIDC_SearchMode__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_SearchMode__c</fullName>
    <label>EPIDC_SearchMode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>