force-app/main/default/objects/EPI__c/fields/EPIDC_SearchModeChangeDate__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_SearchModeChangeDate__c</fullName>
    <label>EPIDC_SearchModeChangeDate</label>
    <type>DateTime</type>
</CustomField>