force-app/main/default/objects/EPI__c/fields/EPIDC_SkipWorkflow__c.field-meta.xml
<CustomField>
    <fullName>EPIDC_SkipWorkflow__c</fullName>
    <label>EPIDC_SkipWorkflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>