force-app/main/default/objects/EPI__c/fields/Reference_Number_Delete_2__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_Delete_2__c</fullName>
    <label>Reference_Number_Delete_2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>