force-app/main/default/objects/EPI__c/fields/VSR_ACName__c.field-meta.xml
<CustomField>
    <fullName>VSR_ACName__c</fullName>
    <label>VSR_ACName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>