force-app/main/default/objects/EPI__c/fields/VSR_Actions__c.field-meta.xml
<CustomField>
    <fullName>VSR_Actions__c</fullName>
    <label>VSR_Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>