force-app/main/default/objects/EPI__c/fields/VSR_AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>VSR_AssignedTo__c</fullName>
    <label>VSR_AssignedTo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>