force-app/main/default/objects/EPI__c/fields/VSR_DataAgeRates__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataAgeRates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataAgeRates</label>
    <type>Checkbox</type>
</CustomField>