force-app/main/default/objects/EPI__c/fields/VSR_DataCounts__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataCounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataCounts</label>
    <type>Checkbox</type>
</CustomField>