force-app/main/default/objects/EPI__c/fields/VSR_DataCrudeRates__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataCrudeRates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataCrudeRates</label>
    <type>Checkbox</type>
</CustomField>