force-app/main/default/objects/EPI__c/fields/VSR_DataFormat__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataFormat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataFormat</label>
    <type>Checkbox</type>
</CustomField>