force-app/main/default/objects/EPI__c/fields/VSR_DataFormatASCIIText__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataFormatASCIIText__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataFormatASCIIText</label>
    <type>Checkbox</type>
</CustomField>