force-app/main/default/objects/EPI__c/fields/VSR_DataFormatDataTable__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataFormatDataTable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataFormatDataTable</label>
    <type>Checkbox</type>
</CustomField>