force-app/main/default/objects/EPI__c/fields/VSR_DataFormatExcelFile__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataFormatExcelFile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataFormatExcelFile</label>
    <type>Checkbox</type>
</CustomField>