force-app/main/default/objects/EPI__c/fields/VSR_DataFormatSASDataSet__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataFormatSASDataSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataFormatSASDataSet</label>
    <type>Checkbox</type>
</CustomField>