force-app/main/default/objects/EPI__c/fields/VSR_DataItemsAddress__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsAddress</label>
    <type>Checkbox</type>
</CustomField>