force-app/main/default/objects/EPI__c/fields/VSR_DataItemsAncestry__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsAncestry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsAncestry</label>
    <type>Checkbox</type>
</CustomField>