force-app/main/default/objects/EPI__c/fields/VSR_DataItemsCensus__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsCensus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsCensus</label>
    <type>Checkbox</type>
</CustomField>