force-app/main/default/objects/EPI__c/fields/VSR_DataItemsCensusText__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsCensusText__c</fullName>
    <label>VSR_DataItemsCensusText</label>
    <length>150</length>
    <type>Text</type>
</CustomField>