force-app/main/default/objects/EPI__c/fields/VSR_DataItemsCertificateNos__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsCertificateNos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsCertificateNos</label>
    <type>Checkbox</type>
</CustomField>