force-app/main/default/objects/EPI__c/fields/VSR_DataItemsDates__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsDates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsDates</label>
    <type>Checkbox</type>
</CustomField>