force-app/main/default/objects/EPI__c/fields/VSR_DataItemsDeathCause__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsDeathCause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsDeathCause</label>
    <type>Checkbox</type>
</CustomField>