force-app/main/default/objects/EPI__c/fields/VSR_DataItemsDeathICD__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsDeathICD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsDeathICD</label>
    <type>Checkbox</type>
</CustomField>