force-app/main/default/objects/EPI__c/fields/VSR_DataItemsIndustry__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsIndustry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsIndustry</label>
    <type>Checkbox</type>
</CustomField>