force-app/main/default/objects/EPI__c/fields/VSR_DataItemsInjury__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsInjury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsInjury</label>
    <type>Checkbox</type>
</CustomField>