force-app/main/default/objects/EPI__c/fields/VSR_DataItemsInstitution__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsInstitution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsInstitution</label>
    <type>Checkbox</type>
</CustomField>