force-app/main/default/objects/EPI__c/fields/VSR_DataItemsLineListing__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsLineListing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsLineListing</label>
    <type>Checkbox</type>
</CustomField>