force-app/main/default/objects/EPI__c/fields/VSR_DataItemsMeasures__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsMeasures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsMeasures</label>
    <type>Checkbox</type>
</CustomField>