force-app/main/default/objects/EPI__c/fields/VSR_DataItemsMulDeathCause__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsMulDeathCause__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsMulDeathCause</label>
    <type>Checkbox</type>
</CustomField>