force-app/main/default/objects/EPI__c/fields/VSR_DataItemsMulDeathICD__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsMulDeathICD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsMulDeathICD</label>
    <type>Checkbox</type>
</CustomField>