force-app/main/default/objects/EPI__c/fields/VSR_DataItemsMulDeathLiterals__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsMulDeathLiterals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsMulDeathLiterals</label>
    <type>Checkbox</type>
</CustomField>