force-app/main/default/objects/EPI__c/fields/VSR_DataItemsNames__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsNames__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsNames</label>
    <type>Checkbox</type>
</CustomField>