force-app/main/default/objects/EPI__c/fields/VSR_DataItemsOMCENos__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsOMCENos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsOMCENos</label>
    <type>Checkbox</type>
</CustomField>