force-app/main/default/objects/EPI__c/fields/VSR_DataItemsSSN__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsSSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsSSN</label>
    <type>Checkbox</type>
</CustomField>