force-app/main/default/objects/EPI__c/fields/VSR_DataItemsTelephoneNos__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsTelephoneNos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsTelephoneNos</label>
    <type>Checkbox</type>
</CustomField>