force-app/main/default/objects/EPI__c/fields/VSR_DataItemsWriteIn__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataItemsWriteIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataItemsWriteIn</label>
    <type>Checkbox</type>
</CustomField>