force-app/main/default/objects/EPI__c/fields/VSR_DataOther__c.field-meta.xml
<CustomField>
    <fullName>VSR_DataOther__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VSR_DataOther</label>
    <type>Checkbox</type>
</CustomField>